--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=employeemanager
+#MySQL Config
+spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
+spring.datasource.username=root
+spring.datasource.password=Haslo1243admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.cj.dialect.MySQL5Dialect
